--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 before_install:
-  - openssl aes-256-cbc -K $encrypted_cd22f9ecf581_key -iv $encrypted_cd22f9ecf581_iv -in secrets.tar.enc -out secrets.tar -d
-  - tar xvf secrets.tar
+  - openssl aes-256-cbc -K $encrypted_d17fc99482d5_key -iv $encrypted_d17fc99482d5_iv -in secrets.tar.xz.enc -out secrets.tar.xz -d
+  - tar xvf secrets.tar.xz
   #- mv google-services.json app/
   - chmod +x gradlew
   - export TZ=America/Santiago
