Correccion build gradle para travis

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'io.fabric'
 
 android {
-    def keystorePropertiesFile = rootProject.file("keystore.properties")
+    //def keystorePropertiesFile = rootProject.file("keystore.properties")
     // Initialize a new Properties() object called keystoreProperties.
-    def keystoreProperties = new Properties()
+    //def keystoreProperties = new Properties()
     // Load your keystore.properties file into the keystoreProperties object.
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    //keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
     signingConfigs {
         /*lastquakechilesign {
