--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ android:
 before_install:
   - openssl aes-256-cbc -K $encrypted_d17fc99482d5_key -iv $encrypted_d17fc99482d5_iv -in secrets.tar.xz.enc -out secrets.tar.xz -d
   - tar xvf secrets.tar.xz
-  #- mv google-services.json app/
+  - mv google-services.json app/
   - chmod +x gradlew
   - export TZ=America/Santiago
 script:
